# cpp-student-manager

./: CMakeLists.txt  Main.qml  detection.cpp  detection.h  main.cpp  manager_ui.cpp  manager_ui.h  model.h  sqlite.cpp  sqlite.h  sqlite_connect.cpp  sqlite_connect.h  sqlite_operate.cpp
